# AI_CodeReview_IvyBot

./: .ai-review.yml.example  .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LOCAL_DEBUG.md  README.md  compose.yaml  design.md  project-design-v1.md  project-design-v2.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  context.py  events.py  github.py  main.py  models.py  policy.py  review.py  service.py  storage.py  worker.py
docs/session/: 2026-07-19-development-log.md
docs/superpowers/plans/: 2026-07-19-github-ai-review-v1.md
tests/: test_context.py  test_events.py  test_github_behavior.py  test_models.py  test_review.py  test_service.py  test_storage.py  test_webhook.py
