[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-review"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44,<46",
  "fastapi==0.115.14",
  "httpx>=0.28,<1",
  "PyJWT>=2.10,<3",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
